--- a/src/main/resources/com/example/wordscramble/hello-view.fxml
+++ b/src/main/resources/com/example/wordscramble/hello-view.fxml
@@ -2,19 +2,26 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.wordscramble.HelloController">
    <children>
-      <Button fx:id="buttonStart" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#startGame" prefWidth="65.0" text="START" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0" />
-      <Button fx:id="buttonExit" layoutX="15.0" layoutY="50.0" mnemonicParsing="false" onAction="#exitGame" prefWidth="65.0" text="EXIT" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" />
+      <Button fx:id="buttonStart" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="65.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font></Button>
+      <Button fx:id="buttonExit" layoutX="15.0" layoutY="50.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="15.0" prefWidth="65.0" text="EXIT" textAlignment="CENTER" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Button>
       <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="15.0" text="WORDSCRAMBLER" textAlignment="CENTER" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.0" AnchorPane.topAnchor="15.0">
          <font>
-            <Font name="Gadugi Bold" size="25.0" />
+            <Font name="Algerian" size="32.0" />
          </font>
       </Label>
       <Label fx:id="labelTime" layoutX="599.0" layoutY="42.0" text="00:00" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
@@ -28,21 +35,16 @@
          </font>
       </Label>
       <TextField fx:id="userInputForm" layoutX="179.0" layoutY="331.0" prefHeight="36.0" prefWidth="297.0" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.0" AnchorPane.topAnchor="331.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="200.0" layoutX="479.0" layoutY="99.0" stroke="BLACK" strokeType="INSIDE" width="138.0" AnchorPane.rightAnchor="15.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="515.0" layoutY="102.0" text="Tentative">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
       <Button fx:id="buttonTry" layoutX="480.0" layoutY="331.0" mnemonicParsing="false" onAction="#tryAnswer" prefHeight="36.0" prefWidth="65.0" text="TRY" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="480.00000000000006" AnchorPane.rightAnchor="94.66666666666667" AnchorPane.topAnchor="331.0" />
-      <VBox fx:id="listDifficulty" disable="true" layoutX="89.0" layoutY="14.0" opacity="0.0" prefHeight="149.0" prefWidth="100.0" spacing="10.0" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="15.0">
+      <VBox fx:id="listDifficulty" disable="true" layoutX="89.0" layoutY="14.0" prefHeight="149.0" prefWidth="75.0" spacing="10.0" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="15.0">
          <children>
-            <Button fx:id="buttonEasy" mnemonicParsing="false" onAction="#startGame" prefHeight="41.0" prefWidth="100.0" text="EASY" />
-            <Button fx:id="buttonMedium" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#startGame" prefHeight="41.0" prefWidth="100.0" text="MEDIUM" />
-            <Button fx:id="buttonHard" layoutX="10.0" layoutY="51.0" mnemonicParsing="false" onAction="#startGame" prefHeight="41.0" prefWidth="100.0" text="HARD" />
+            <Button fx:id="buttonEasy" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="EASY" />
+            <Button fx:id="buttonMedium" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="MEDIUM" />
+            <Button fx:id="buttonHard" layoutX="10.0" layoutY="51.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="HARD" />
          </children>
       </VBox>
       <Label fx:id="informationText" layoutX="292.0" layoutY="223.0" />
       <Label fx:id="wordsTentative" layoutX="542.0" layoutY="135.0" />
+      <ListView fx:id="listTentatives" layoutX="476.0" layoutY="113.0" prefHeight="186.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
