--- a/src/main/resources/com/example/wordscramble/wordScrambler-view.fxml
+++ b/src/main/resources/com/example/wordscramble/wordScrambler-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.wordscramble.HelloController">
+<AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.wordscramble.WordScramblerController">
    <children>
       <Button fx:id="buttonStart" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="65.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
          <font>
@@ -19,7 +19,7 @@
             <Font name="Berlin Sans FB" size="12.0" />
          </font>
       </Button>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="15.0" text="WORDSCRAMBLER" textAlignment="CENTER" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.0" AnchorPane.topAnchor="15.0">
+      <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="15.0" text="WORDSCRAMBLER" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.0" AnchorPane.topAnchor="15.0">
          <font>
             <Font name="Algerian" size="32.0" />
          </font>
@@ -35,16 +35,15 @@
          </font>
       </Label>
       <TextField fx:id="userInputForm" layoutX="179.0" layoutY="331.0" prefHeight="36.0" prefWidth="297.0" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.0" AnchorPane.topAnchor="331.0" />
-      <Button fx:id="buttonTry" layoutX="480.0" layoutY="331.0" mnemonicParsing="false" onAction="#tryAnswer" prefHeight="36.0" prefWidth="65.0" text="TRY" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="480.00000000000006" AnchorPane.rightAnchor="94.66666666666667" AnchorPane.topAnchor="331.0" />
-      <VBox fx:id="listDifficulty" disable="true" layoutX="89.0" layoutY="14.0" prefHeight="149.0" prefWidth="75.0" spacing="10.0" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="15.0">
+      <Button fx:id="buttonTry" layoutX="480.0" layoutY="331.0" mnemonicParsing="false" onAction="#tryAnswer" prefHeight="36.0" prefWidth="65.0" text="TRY" AnchorPane.bottomAnchor="113.0" AnchorPane.rightAnchor="94.66666666666667" />
+      <VBox fx:id="listDifficulty" disable="true" layoutX="89.0" layoutY="14.0" prefHeight="96.0" prefWidth="75.0" spacing="10.0" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="15.0">
          <children>
             <Button fx:id="buttonEasy" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="EASY" />
             <Button fx:id="buttonMedium" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="MEDIUM" />
             <Button fx:id="buttonHard" layoutX="10.0" layoutY="51.0" mnemonicParsing="false" onAction="#startGame" prefHeight="15.0" prefWidth="100.0" text="HARD" />
          </children>
       </VBox>
-      <Label fx:id="informationText" layoutX="292.0" layoutY="223.0" />
-      <Label fx:id="wordsTentative" layoutX="542.0" layoutY="135.0" />
-      <ListView fx:id="listTentatives" layoutX="476.0" layoutY="113.0" prefHeight="186.0" prefWidth="150.0" />
+      <Label fx:id="informationText" layoutX="236.0" layoutY="222.0" prefHeight="17.0" prefWidth="169.0" AnchorPane.leftAnchor="236.00000000000003" AnchorPane.rightAnchor="234.66666666666666" />
+      <ListView fx:id="listTentatives" editable="true" layoutX="476.0" layoutY="113.0" prefHeight="186.0" prefWidth="150.0" AnchorPane.bottomAnchor="181.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="113.0" />
    </children>
 </AnchorPane>
